28.1.14
-------
(RB=1946908)
Support long for HTTP_IDLE_TIMEOUT and HTTP_SSL_IDLE_TIMEOUT

28.1.13
-------
(RB=1952903)
Fix the logic in SchemaParser to match SchemaResolver when loading pegaus schemas from jar files.

28.1.12
-------
(RB=1943306)
Fix server error response for bad input entity, to return bad request in response

(RB=1948470)
Fix bug that would cause schema translator to fail if run on MPs with multiple modules containing PDSC files.

28.1.11
-------
(RB=1943392)
Publish all schemas as-is, temporarily publish translated PDSC schemas

(RB=1946416)
Suppress logging statement in ResolvedPropertiesReaderVisitor

(RB=1934338)
Guard against NPE when RestLiServiceException is initialized with null status. Also updates server logic to handle null status cleanly.
 This change should not affect clients based on the following points:
  -> Today, if status is null, the framework code throws NPE when serializing the exception or converting to Response. This NPE is then handled as unknown error and returned as 500 error to client.
  -> With this change, clients will still get 500 error, with the correct error details serialized in the body.
  -> The Rest.Li filter chain will continue to see the actual exception (with null status), thus not affecting any custom filter behavior.

(RB=1885009)
Add "validateSchemaAnnotationTask" gradle task for validating schema annotations

28.1.10
------
(RB=1932852)
Expose some utility methods for use elsewhere

(RB=1929668)
Expose action return type in FilterRequestContext

28.1.9
------
(RB=1929558)
Add back TransportHealthCheck constructor and deprecate it.

28.1.8
------
(RB=1927937)
Do not share RequestContext and wire attributes between D2 healthcheck requests.

28.1.7
------
(RB=1925299)
Expose some methods in the protobuf codec for inheritors to customize

28.1.6
------
(RB=1918095)
Add additional debug logging to RequestFinalizers.

28.1.5
------
Empty commit to trigger a new release

28.1.4
------
(RB=1921104)